--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="@Url.Action("Index", "Home")">
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-laugh-wink"></i>
                 </div>
@@ -43,7 +43,7 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
-                <a class="nav-link" href="index.html">
+                <a class="nav-link" href="@Url.Action("cards", "Home")">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Dashboard</span>
                 </a>
@@ -61,18 +61,18 @@
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseOne"
                    aria-expanded="true" aria-controls="collapseOne">
-                    <i class="fas fa-fw fa-tasks"></i>
+                    <i class="fas fa-fw fa-cog"></i>
                     <span>Tasks By Progress</span>
                 </a>
                 <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Task List</h6>
-                        <a class="collapse-item">@Html.ActionLink("Backlog", "cards", "Home")</a>
-                        <a class="collapse-item">@Html.ActionLink("Req Gathering", "cards", "Home")</a>
-                        <a class="collapse-item">@Html.ActionLink("In Progress", "cards", "Home")</a>
-                        <a class="collapse-item">@Html.ActionLink("QA", "cards", "Home")</a>
-                        <a class="collapse-item">@Html.ActionLink("Deployed", "cards", "Home")</a>
-                        <a class="collapse-item">@Html.ActionLink("User Acceptance", "card", "Home")</a>
+                        <a class="collapse-item" href="@Url.Action("cards", "Home")">Backlog</a>
+                        <a class="collapse-item" href="@Url.Action("cards", "Home")">Req Gathering</a>
+                        <a class="collapse-item" href="@Url.Action("cards", "Home")">In Progress</a>
+                        <a class="collapse-item" href="@Url.Action("cards", "Home")">QA</a>
+                        <a class="collapse-item" href="@Url.Action("cards", "Home")">Deployed</a>
+                        <a class="collapse-item" href="@Url.Action("cards", "Home")">User Acceptance</a>
                     </div>
                 </div>
             </li>
@@ -81,14 +81,14 @@
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
                    aria-expanded="true" aria-controls="collapseTwo">
-                    <i class="fas fa-fw fa-chalkboard"></i>
+                    <i class="fas fa-fw fa-tasks"></i>
                     <span>Task View</span>
                 </a>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Task List</h6>
-                        <a class="collapse-item">@Html.ActionLink("Board", "cards", "Home")</a>
-                        <a class="collapse-item">@Html.ActionLink("List", "cards", "Home")</a>
+                        <a class="collapse-item" href="@Url.Action("cards", "Home")">Board</a>
+                        <a class="collapse-item" href="@Url.Action("cards", "Home")">List</a>
                     </div>
                 </div>
             </li>
@@ -104,15 +104,15 @@
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
                    aria-expanded="true" aria-controls="collapsePages">
-                    <i class="fas fa-fw fa-user-shield"></i>
+                    <i class="fas fa-fw fa-folder"></i>
                     <span>Login</span>
                 </a>
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Login Screens:</h6>
-                        <a class="collapse-item" href="login.html">Login</a>
-                        <a class="collapse-item" href="register.html">Register</a>
-                        <a class="collapse-item" href="forgot-password.html">Forgot Password</a>
+                        <a class="collapse-item" href="@Url.Action("Login", "Account")">Login</a>
+                        <a class="collapse-item" href="@Url.Action("Register", "Account")">Register</a>
+                        <a class="collapse-item" href="@Url.Action("ForgotPassword", "Account")">Forgot Password</a>
                     </div>
                 </div>
             </li>
@@ -257,34 +257,12 @@
                 <!-- End of Topbar -->
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
-                    @RenderBody()
                     <!-- Page Heading -->
                     <div class="d-sm-flex align-items-center justify-content-between mb-4">
                         <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
                     </div>
 
-                    <!-- Content Row -->
-                    <div class="row">
-                        <div class="col-lg-6 mb-4">
-                            <!-- Approach -->
-                            <div class="card shadow mb-4">
-                                <div class="card-header py-3">
-                                    <h6 class="m-0 font-weight-bold text-primary">Development Approach</h6>
-                                </div>
-                                <div class="card-body">
-                                    <p>
-                                        SB Admin 2 makes extensive use of Bootstrap 4 utility classes in order to reduce
-                                        CSS bloat and poor page performance. Custom CSS classes are used to create
-                                        custom components and custom utility classes.
-                                    </p>
-                                    <p class="mb-0">
-                                        Before working with this theme, you should become familiar with the
-                                        Bootstrap framework, especially the utility classes.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    @RenderBody()
 
                 </div>
                 <!-- /.container-fluid -->
@@ -325,7 +303,7 @@
                 <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
                 <div class="modal-footer">
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="login.html">Logout</a>
+                    <a class="btn btn-primary" href="@Url.Action("Login", "Account")">Logout</a>
                 </div>
             </div>
         </div>
