--- a/TicketTracker/Views/Home/CardView.cshtml
+++ b/TicketTracker/Views/Home/CardView.cshtml
@@ -1,23 +1,94 @@
-﻿@model TicketTracker.Models.CardView
+﻿@model  IEnumerable<TicketTracker.Models.CardView>
 @{
-    ViewBag.Title = "cards";
+    ViewBag.Title = "Card View";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <!-- Content Row -->
 <div class="row">
-    <div class="col-lg-6 mb-4">
-        <!-- Approach -->
-        <div class="card shadow mb-4">
-            <div class="card-header py-3">
-                <h6 class="m-0 font-weight-bold text-primary"></h6>
-            </div>
+    <!-- Task % Card -->
+    <div class="col-xl-3 col-md-6 mb-4">
+        <div class="card border-left-info shadow h-100 py-2">
             <div class="card-body">
-                @Model.id
-                @Model.name
-                @Model.progress
-                @Model.description
+                <div class="row no-gutters align-items-center">
+                    <div class="col mr-2">
+                        <div class="text-xs font-weight-bold text-info text-uppercase mb-1">
+                            Tasks
+                        </div>
+                        <div class="row no-gutters align-items-center">
+                            <div class="col-auto">
+                                <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">50%</div>
+                            </div>
+                            <div class="col">
+                                <div class="progress progress-sm mr-2">
+                                    <div class="progress-bar bg-info" role="progressbar"
+                                         style="width: 50%" aria-valuenow="50" aria-valuemin="0"
+                                         aria-valuemax="100"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-auto">
+                        <i class="fas fa-clipboard-list fa-2x text-gray-300"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Pending Requests Card-->
+    <div class="col-xl-3 col-md-6 mb-4">
+        <div class="card border-left-warning shadow h-100 py-2">
+            <div class="card-body">
+                <div class="row no-gutters align-items-center">
+                    <div class="col mr-2">
+                        <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">
+                            Pending Requests
+                        </div>
+                        <div class="h5 mb-0 font-weight-bold text-gray-800">@Model.Count()</div>
+                    </div>
+                    <div class="col-auto">
+                        <i class="fas fa-comments fa-2x text-gray-300"></i>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
+@{
+    var index = 0;
+    while (index < Model.Count())
+    {
+        <!-- Content Row -->
+        <div class="row">
+            <div class="col-lg-6 mb-4">
+                <!-- Approach -->
+                <div class="card shadow mb-4">
+                    <div class="card-header py-3">
+                        <h6 class="m-0 font-weight-bold text-primary">@Model.ElementAt(index).name</h6>
+                    </div>
+                    <div class="card-body">
+                        <p>@Model.ElementAt(index).progress</p>
+                        <p>@Model.ElementAt(index).description</p>
+                    </div>
+                </div>
+            </div>
+            @if (index + 1 < Model.Count())
+            {
+                <div class="col-lg-6 mb-4">
+                    <!-- Approach -->
+                    <div class="card shadow mb-4">
+                        <div class="card-header py-3">
+                            <h6 class="m-0 font-weight-bold text-primary">@Model.ElementAt(index + 1).name</h6>
+                        </div>
+                        <div class="card-body">
+                            <p>@Model.ElementAt(index + 1).progress</p>
+                            <p>@Model.ElementAt(index + 1).description</p>
+                        </div>
+                    </div>
+                </div>
+            }
+        </div>
+        index += 2;
+    }
+}
