Created DataLibrary for taskview

--- a/TicketTracker/Views/Home/CardView.cshtml
+++ b/TicketTracker/Views/Home/CardView.cshtml
@@ -4,6 +4,14 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<!-- Page Heading -->
+<div class="d-sm-flex align-items-center justify-content-between mb-4">
+    <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
+    <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
+        <i class="fas fa-plus-circle"></i>
+    </a>
+</div>
+
 <!-- Content Row -->
 <div class="row">
     <!-- Task % Card -->
@@ -61,7 +69,7 @@
     {
         <!-- Content Row -->
         <div class="row">
-            <div class="col-lg-6 mb-4">
+            <div class="col-xl-3 col-md-6 mb-4">
                 <!-- Approach -->
                 <div class="card shadow mb-4">
                     <div class="card-header py-3">
@@ -75,7 +83,7 @@
             </div>
             @if (index + 1 < Model.Count())
             {
-                <div class="col-lg-6 mb-4">
+                <div class="col-xl-3 col-md-6 mb-4">
                     <!-- Approach -->
                     <div class="card shadow mb-4">
                         <div class="card-header py-3">
@@ -88,7 +96,37 @@
                     </div>
                 </div>
             }
+            @if (index + 2 < Model.Count())
+            {
+                <div class="col-xl-3 col-md-6 mb-4">
+                    <!-- Approach -->
+                    <div class="card shadow mb-4">
+                        <div class="card-header py-3">
+                            <h6 class="m-0 font-weight-bold text-primary">@Model.ElementAt(index + 2).name</h6>
+                        </div>
+                        <div class="card-body">
+                            <p>@Model.ElementAt(index + 2).progress</p>
+                            <p>@Model.ElementAt(index + 2).description</p>
+                        </div>
+                    </div>
+                </div>
+            }
+            @if (index + 3 < Model.Count())
+            {
+                <div class="col-xl-3 col-md-6 mb-4">
+                    <!-- Approach -->
+                    <div class="card shadow mb-4">
+                        <div class="card-header py-3">
+                            <h6 class="m-0 font-weight-bold text-primary">@Model.ElementAt(index + 3).name</h6>
+                        </div>
+                        <div class="card-body">
+                            <p>@Model.ElementAt(index + 3).progress</p>
+                            <p>@Model.ElementAt(index + 3).description</p>
+                        </div>
+                    </div>
+                </div>
+            }
         </div>
-        index += 2;
+        index += 4;
     }
 }
