--- a/TicketTracker/Views/Home/TaskView.cshtml
+++ b/TicketTracker/Views/Home/TaskView.cshtml
@@ -1,17 +1,29 @@
-﻿@{
-    Layout = null;
+﻿@model  IEnumerable<TicketTracker.Models.TaskView>
+@{
+    ViewBag.Title = "Task View";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<!DOCTYPE html>
+<!-- Page Heading -->
+<div class="d-sm-flex align-items-center justify-content-between mb-4">
+    <h1 class="h3 mb-0 text-gray-800">Task</h1>
+</div>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title></title>
-</head>
-<body>
-    <div>
-    
+<div class="col-lg-6 mb-4">
+    <div class="card shadow mb-4">
+        <div class="card-header py-3">
+            <h6 class="m-0 font-weight-bold text-primary">@Model.Count</h6>
+        </div>
+        <div class="card-body">
+            <p>
+                SB Admin 2 makes extensive use of Bootstrap 4 utility classes in order to reduce
+                CSS bloat and poor page performance. Custom CSS classes are used to create
+                custom components and custom utility classes.
+            </p>
+            <p class="mb-0">
+                Before working with this theme, you should become familiar with the
+                Bootstrap framework, especially the utility classes.
+            </p>
+        </div>
     </div>
-</body>
-</html>
+</div>
