--- a/TicketTracker/Views/Shared/_Layout.cshtml
+++ b/TicketTracker/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="@Url.Action("CardView", "Home", new  { category = "All" })">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="@Url.Action("CardView", "Home", new  { id = "All" })">
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-laugh-wink"></i>
                 </div>
@@ -40,7 +40,7 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
-                <a class="nav-link" href="@Url.Action("CardView", "Home", new  { category = "All" })">
+                <a class="nav-link" href="@Url.Action("CardView", "Home", new  { id = "All" })">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Dashboard</span>
                 </a>
@@ -64,12 +64,12 @@
                 <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Task List</h6>
-                        <a class="collapse-item" href="@Url.Action("CardView", "Home", new  { category = "Backlog" })">Backlog</a>
-                        <a class="collapse-item" href="@Url.Action("CardView", "Home", new  { category = "Req Gathering" })">Req Gathering</a>
-                        <a class="collapse-item" href="@Url.Action("CardView", "Home", new  { category = "In Progress" })">In Progress</a>
-                        <a class="collapse-item" href="@Url.Action("CardView", "Home", new  { category = "QA" })">QA</a>
-                        <a class="collapse-item" href="@Url.Action("CardView", "Home", new  { category = "Deployed" })">Deployed</a>
-                        <a class="collapse-item" href="@Url.Action("CardView", "Home", new  { category = "User Acceptance" })">User Acceptance</a>
+                        <a class="collapse-item" href="@Url.Action("CardView", "Home", new  { id = "Backlog" })">Backlog</a>
+                        <a class="collapse-item" href="@Url.Action("CardView", "Home", new  { id = "Req Gathering" })">Req Gathering</a>
+                        <a class="collapse-item" href="@Url.Action("CardView", "Home", new  { id = "In Progress" })">In Progress</a>
+                        <a class="collapse-item" href="@Url.Action("CardView", "Home", new  { id = "QA" })">QA</a>
+                        <a class="collapse-item" href="@Url.Action("CardView", "Home", new  { id = "Deployed" })">Deployed</a>
+                        <a class="collapse-item" href="@Url.Action("CardView", "Home", new  { id = "User Acceptance" })">User Acceptance</a>
                     </div>
                 </div>
             </li>
@@ -84,9 +84,9 @@
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Views</h6>
-                        <a class="collapse-item" href="@Url.Action("CardView", "Home", new  { category = "All" })">Card View</a>
-                        <a class="collapse-item" href="@Url.Action("BoardView", "Home", new  { category = "All" })">Board View</a>
-                        <a class="collapse-item" href="@Url.Action("ListView", "Home", new  { category = "All" })">List View</a>
+                        <a class="collapse-item" href="@Url.Action("CardView", "Home", new  { id = "All" })">Card View</a>
+                        <a class="collapse-item" href="@Url.Action("BoardView", "Home", new  { id = "All" })">Board View</a>
+                        <a class="collapse-item" href="@Url.Action("ListView", "Home", new  { id = "All" })">List View</a>
                     </div>
                 </div>
             </li>
