--- a/TicketTracker/Views/Home/CardView.cshtml
+++ b/TicketTracker/Views/Home/CardView.cshtml
@@ -1,4 +1,4 @@
-﻿@model  IEnumerable<TicketTracker.Models.CardView>
+﻿@model  IEnumerable<TicketTracker.Models.CardViewModel>
 @{
     ViewBag.Title = "Card View";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -7,7 +7,7 @@
 <!-- Page Heading -->
 <div class="d-sm-flex align-items-center justify-content-between mb-4">
     <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
-    <a href="#" class="btn btn-success btn-circle btn-lg">
+    <a href="@Url.Action("TaskView", "Home", new  { id = 0 })" class="btn btn-success btn-circle btn-lg">
         <i class="fas fa-plus-circle"></i>
     </a>
 </div>
@@ -24,16 +24,25 @@
                             Tasks
                         </div>
                         <div class="row no-gutters align-items-center">
-                            <div class="col-auto">
-                                <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">50%</div>
-                            </div>
-                            <div class="col">
-                                <div class="progress progress-sm mr-2">
-                                    <div class="progress-bar bg-info" role="progressbar"
-                                         style="width: 50%" aria-valuenow="50" aria-valuemin="0"
-                                         aria-valuemax="100"></div>
+                            @{
+                                int DoneCount = Model.Count(mdl => mdl.progress.TrimEnd(' ').Equals("User Acceptance"));
+                                float percentDone = (float)DoneCount / (float)@Model.Count() * 100;
+
+                                string percentDoneStr = percentDone.ToString();
+                                if (percentDoneStr.Length > 4)
+                                    percentDoneStr = percentDoneStr.Substring(0, 5);
+                                
+                                <div class="col-auto">
+                                    <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">@percentDoneStr%</div>
                                 </div>
-                            </div>
+                                <div class="col">
+                                    <div class="progress progress-sm mr-2">
+                                        <div class="progress-bar bg-info" role="progressbar"
+                                             style="width: @percentDoneStr%" aria-valuenow="50" aria-valuemin="0"
+                                             aria-valuemax="100"></div>
+                                    </div>
+                                </div>
+                            }
                         </div>
                     </div>
                     <div class="col-auto">
@@ -83,8 +92,8 @@
                                     <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
-                                    <a class="dropdown-item" href="#">View</a>
-                                    <a class="dropdown-item" href="#">Edit</a>
+                                    <a class="dropdown-item" href="@Url.Action("TaskView", "Home", new  { id = Model.ElementAt(innerIndex).id.ToString().TrimEnd(' ') })">View/Edit</a>
+                                    <a class="dropdown-item" href="#">Delete</a>
                                 </div>
                             </div>
                         </div>
