--- a/TicketTracker/Views/Home/CardView.cshtml
+++ b/TicketTracker/Views/Home/CardView.cshtml
@@ -7,51 +7,13 @@
 <!-- Page Heading -->
 <div class="d-sm-flex align-items-center justify-content-between mb-4">
     <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
-    <a href="@Url.Action("TaskView", "Home", new  { id = 0 })" class="btn btn-success btn-circle btn-lg">
+    <a href="@Url.Action("TaskView", "Home", new { id = 0 })" class="btn btn-success btn-circle btn-lg">
         <i class="fas fa-plus-circle"></i>
     </a>
 </div>
 
 <!-- Content Row -->
 <div class="row">
-    <!-- Task % Card -->
-    <div class="col-xl-3 col-md-6 mb-4">
-        <div class="card border-left-info shadow h-100 py-2">
-            <div class="card-body">
-                <div class="row no-gutters align-items-center">
-                    <div class="col mr-2">
-                        <div class="text-xs font-weight-bold text-info text-uppercase mb-1">
-                            Tasks
-                        </div>
-                        <div class="row no-gutters align-items-center">
-                            @{
-                                int DoneCount = Model.Count(mdl => mdl.progress.TrimEnd(' ').Equals("User Acceptance"));
-                                float percentDone = (float)DoneCount / (float)@Model.Count() * 100;
-
-                                string percentDoneStr = percentDone.ToString();
-                                if (percentDoneStr.Length > 4)
-                                    percentDoneStr = percentDoneStr.Substring(0, 5);
-                                
-                                <div class="col-auto">
-                                    <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">@percentDoneStr%</div>
-                                </div>
-                                <div class="col">
-                                    <div class="progress progress-sm mr-2">
-                                        <div class="progress-bar bg-info" role="progressbar"
-                                             style="width: @percentDoneStr%" aria-valuenow="50" aria-valuemin="0"
-                                             aria-valuemax="100"></div>
-                                    </div>
-                                </div>
-                            }
-                        </div>
-                    </div>
-                    <div class="col-auto">
-                        <i class="fas fa-clipboard-list fa-2x text-gray-300"></i>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <!-- Pending Requests Card-->
     <div class="col-xl-3 col-md-6 mb-4">
@@ -60,9 +22,9 @@
                 <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                         <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">
-                            Pending Requests
+                            Tasks
                         </div>
-                        <div class="h5 mb-0 font-weight-bold text-gray-800">@Model.Count()</div>
+                        <div class="h5 mb-0 font-weight-bold text-gray-800">@{var count = Model.Count() - Model.Count(mdl => mdl.progress.TrimEnd(' ').Equals("User Acceptance"));}@count</div>
                     </div>
                     <div class="col-auto">
                         <i class="fas fa-comments fa-2x text-gray-300"></i>
@@ -93,7 +55,8 @@
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
                                     <a class="dropdown-item" href="@Url.Action("TaskView", "Home", new  { id = Model.ElementAt(innerIndex).id.ToString().TrimEnd(' ') })">View/Edit</a>
-                                    <a class="dropdown-item" href="#">Delete</a>
+                                    @{ var actionID = "CardView_All_" + Model.ElementAt(innerIndex).id + "_Delete_0";}
+                                    <a class="dropdown-item" href="@Url.Action("Action", "Home", new  { id =  actionID})">Delete</a>
                                 </div>
                             </div>
                         </div>
